# kiteticker-async-manager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MULTI_API_FEATURE_SUMMARY.md  README.md  REORGANIZATION_COMPLETE.md  REPOSITORY_SETUP_GUIDE.md  VERSION_QUICKREF.md  flake.nix  justfile
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  minimal-ci.yml  publish.yml  release.yml
benches/: websocket_performance.rs  websocket_performance_fixed.rs
docs/: AUTO_RELEASE.md  AUTO_RELEASE_ERROR_HANDLING.md  CODEBASE_CLEANUP_SUMMARY.md  CONTRIBUTING.md  EFFICIENT_WORKFLOW.md  README.md  SETUP.md  VERSION_MANAGEMENT.md  VERSION_MIGRATION.md
docs/api/: README.md  config.md  errors.md  manager.md  models.md  ticker.md
docs/guides/: DYNAMIC_SUBSCRIPTION_COMPLETE.md  DYNAMIC_SUBSCRIPTION_GUIDE.md  DYNAMIC_SUBSCRIPTION_QUICKREF.md  IMPLEMENTATION_COMPLETE.md  MULTI_API_GUIDE.md  PERFORMANCE_IMPROVEMENTS.md  PROJECT_COMPLETION_SUMMARY.md  RUNTIME_SUBSCRIPTION_GUIDE.md  examples.md  getting-started.md
examples/: README.md  async.rs  basic.rs  dynamic_subscription_demo.rs  heartbeat_liveness_demo.rs  manager_raw_frames.rs  mode_change_test.rs  mode_test.rs  multi_api_demo.rs  runtime_subscription_example.rs  sample.rs  serde.rs  simple_tick_test.rs
examples/advanced/: Cargo.examples.md  README.md  dynamic_subscription_demo.rs  manager_demo.rs  manager_raw_full_peek.rs
examples/basic/: README.md  portfolio_monitor.rs  runtime_subscription_example.rs  single_connection.rs
examples/performance/: README.md  high_frequency.rs  load_test.rs  market_scanner.rs  message_flow_test.rs  parse_full_quote_bench.rs  performance_demo.rs  raw_full_peek.rs  raw_vs_parsed.rs
scripts/: auto-release.sh  bump-version.sh  cleanup.sh  create-tag.sh  install-hooks.sh  pre-push  release.sh  setup-template.sh
src/: errors.rs  lib.rs  main.rs  parser.rs  ticker.rs
src/manager/: config.rs  connection_manager.rs  connection_pool.rs  health_monitor.rs  message_processor.rs  mod.rs  multi_api_manager.rs
src/models/: depth.rs  exchange.rs  mod.rs  mode.rs  ohlc.rs  order.rs  request.rs  text_message.rs  tick.rs  tick_message.rs  tick_raw.rs  ticker_message.rs
tests/: integration_tests.rs  ticker_test.rs
tests/common/: mod.rs
