[package]
authors = ["Kaushik Chakraborty <git@kaushikc.org>", "Shaun Pai <shauna.pai@gmail.com>"]
name = "kiteticker-async-manager"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/SPRAGE/kiteticker-async-manager"
documentation = "https://docs.rs/kiteticker-async-manager/latest/kiteticker-async-manager/"
description = """
High-performance async WebSocket client for Kite Connect API with multi-connection support,
dynamic subscription management, and optimized data processing.
"""
categories = ["asynchronous", "finance", "api-bindings", "network-programming"]
keywords = ["kite", "websocket", "trading", "async", "real-time"]

[lib]
name = "kiteticker_async_manager"
path = "src/lib.rs"
doc = true

# Basic Examples - Simple, focused examples for getting started
[[example]]
name = "single_connection"
path = "examples/basic/single_connection.rs"
doc = false

[[example]]
name = "portfolio_monitor"
path = "examples/basic/portfolio_monitor.rs"
doc = false

[[example]]
name = "runtime_subscription_example"
path = "examples/basic/runtime_subscription_example.rs"
doc = false

# Advanced Examples - Complex scenarios and advanced features
[[example]]
name = "dynamic_subscription_demo"
path = "examples/dynamic_subscription_demo.rs"
doc = false

[[example]]
name = "manager_demo"
path = "examples/advanced/manager_demo.rs"
doc = false

# Performance Examples - Performance optimization and benchmarking
[[example]]
name = "performance_demo"
path = "examples/performance/performance_demo.rs"
doc = false



[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.27", features = ["native-tls"] }
futures-util = { version = "0.3", features = ["sink"] }
tokio-stream = { version = "0.1", features = ["full"] }
url = "2.5"
serde_with = "3.14"
chrono = { version = "0.4.41", features = ["serde"] }
byteorder = "1.5"
log = "0.4"
env_logger = "0.11"
smallvec = "1.15"
bytes = "1.10"
bytemuck = { version = "1.23", features = ["derive"] }
zerocopy = { version = "0.8.26", features = ["derive"] }

[dev-dependencies]
base64 = "0.22"

# Additional Performance Examples
[[example]]
name = "market_scanner"
path = "examples/performance/market_scanner.rs"
doc = false



[[example]]
name = "high_frequency"
path = "examples/performance/high_frequency.rs"
doc = false


# Docs.rs configuration to generate comprehensive docs
[package.metadata.docs.rs]
all-features = true
# Build for the primary target; docs.rs will build for its default as well
targets = ["x86_64-unknown-linux-gnu"]
[[example]]
name = "parse_full_quote_bench"
path = "examples/performance/parse_full_quote_bench.rs"
doc = false

[[example]]
name = "raw_full_peek"
path = "examples/performance/raw_full_peek.rs"
doc = true

[[example]]
name = "raw_vs_parsed"
path = "examples/performance/raw_vs_parsed.rs"
doc = true
